--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     compile "net.sf.jung:jung-algorithms:2.1.1"
     compile "net.sf.jung:jung-io:2.1.1"
     compile "net.sf.jung:jung-samples:2.1.1"
+    compile "org.jheaps:jheaps:0.14"
 }
 
 test {
