--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     compile "org.graphstream:gs-core:2.0"
     compile "org.graphstream:gs-ui-swing:2.0"
     compile "org.graphstream:gs-algo:2.0"
+    compile "org.knowm.xchart:xchart:3.8.0"
 }
 
 test {
